--- a/reports/html/suites.html
+++ b/reports/html/suites.html
@@ -16,6 +16,7 @@
   <h2>Automation Test Report</h2>
   <p>
     <a href="overview.html" target="main">Overview</a>
+        &#183; <a href="output.html" target="main">Log Output</a>
           </p>
 </div>
 <table id="suites">
